[project]
name = "calculate-fake-te"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.14",
    "hyperliquid-python-sdk>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyinform>=0.2.0",
    "retry>=0.9.2",
    "seaborn>=0.13.2",
]
