[project]
name = "hyperliquid-corr-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.14",
    "hyperliquid-python-sdk>=0.8.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "requests>=2.32.0",
    "retry>=0.9.2",
]
